--- a/www/report.html
+++ b/www/report.html
@@ -5,9 +5,9 @@
     <div ng-controller="ReportDetailController" style="height: 100%;">
         <div class="navbar">
             <div class="navbar-inner">
-                <div class="left"><a href="#" class="back link"> <i class="icon icon-back"></i><span>Back</span></a>
+                <div class="left"><a href="#" class="back link"> <i class="icon icon-back"></i></a>
                 </div>
-                <div class="center sliding">{{report.name}}</div>
+                <div class="center sliding">{{title}}</div>
                 <div class="right">
                     <a href="#"
                        class="link icon-only open-panel">
@@ -15,15 +15,28 @@
                 </div>
             </div>
         </div>
-        <div class="page-content" style="padding-top: 0px;padding-bottom: 40px;">
-            <div class="slider-container">
-                <div class="slider-wrapper">
-                    <div class="slider-slide"><h3 style="text-align: center">First slide</h3><p style="text-align: center">{{report.content}}</p></div>
-                    <div class="slider-slide"><h3 style="text-align: center">Second slide</h3><p style="text-align: center">{{report.content}}</p></div>
-                    <div class="slider-slide"><h3 style="text-align: center">Third slide</h3><p style="text-align: center">{{report.content}}</p></div>
-                </div>
-                <div class="slider-pagination"></div>
-            </div>
+        <div class="page-content">
+           <div class="list-block">
+<ul>
+<li><a href="article.html?id=9888" class="item-link item-content">
+<div class="item-inner">
+<div class="item-title">你不知道的HTTP</div>
+</div></a></li>
+<li><a href="#" class="item-link item-content">
+<div class="item-inner">
+<div class="item-title">John Doe</div>
+</div></a></li>
+
+<li><a href="#" class="item-link item-content">
+<div class="item-inner">
+<div class="item-title">Ivan Petrov</div>
+</div></a></li>
+<li><a href="#" class="item-link item-content">
+<div class="item-inner">
+<div class="item-title">Jenna Smith</div>
+</div></a></li>
+</ul>
+</div>
         </div>
     </div>
 </div>
