--- a/www/index.html
+++ b/www/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <title>{{appName}}</title>
-    <link rel="stylesheet" href="bower_components/framework7/dist/css/framework7.min.css">
+    <title>{{app.name}}</title>
+    <link rel="stylesheet" href="bower_components/framework7/dist/css/framework7.material.min.css">
     <script src="bower_components/requirejs/require.js" data-main="js/app.js"></script>
 </head>
 <body>
@@ -17,7 +17,7 @@
             <div data-page="index" class="page navbar-fixed" ng-controller="ReportListController">
                 <div class="navbar">
                     <div class="navbar-inner">
-                        <div class="center sliding">{{appName}}</div>
+                        <div class="center sliding">{{app.name}}</div>
                         <div class="right">
                             <a href="#"
                                class="link icon-only open-panel">
@@ -28,30 +28,62 @@
                 <div class="page-content">
                     <div class="content-block-title">{{appHeader}}</div>
                     <div class="list-block accordion-list">
-                        <ul>
-                            <li class="accordion-item" ng-repeat="category in categories" report-repeat-directive>
-                                <a href="#" id="{{category.id}}"  class="item-link item-content" >
-                                    <div class="item-inner">
-                                        <div class="item-title">{{category.name}}</div>
-                                    </div>
-                                </a>
-                                <div class="accordion-item-content">
-                                    <div class="content-block">
-                                        <div class="list-block">
-                                            <ul>
-                                                <li ng-repeat="report in  category.reports">
-                                                    <a href="report.html?id={{report.id}}" class="item-link item-content">
-                                                        <div class="item-inner">
-                                                            <div class="item-title">{{report.name}}</div>
-                                                        </div>
-                                                    </a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
+                      <div class="list-block media-list">
+<ul>
+<li class="swipeout transitioning">
+<div class="swipeout-content"><a href="report.html?name=知乎日报" class="item-link item-content">
+<div class="item-inner">
+<div class="item-title-row">
+<div class="item-title">Facebook</div>
+<div class="item-after">17:14</div>
+</div>
+<div class="item-subtitle">New messages from John Doe</div>
+<div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
+</div></a></div>
+<div class="swipeout-actions-left"><a href="#" class="bg-green swipeout-overswipe demo-reply" style="left: 0px; z-index: 2; transform: translate3d(106px, 0px, 0px); -webkit-transform: translate3d(106px, 0px, 0px);">Reply</a><a href="#" class="demo-forward bg-blue" style="z-index: 1; transform: translate3d(0px, 0px, 0px); -webkit-transform: translate3d(0px, 0px, 0px);">Forward</a></div>
+<div class="swipeout-actions-right"><a href="#" class="demo-actions" style="transform: translate3d(0px, 0px, 0px); -webkit-transform: translate3d(0px, 0px, 0px);">More</a><a href="#" class="demo-mark bg-orange" style="transform: translate3d(-85px, 0px, 0px); -webkit-transform: translate3d(-85px, 0px, 0px);">Mark</a><a href="#" data-confirm="Are you sure you want to delete this item?" class="swipeout-delete swipeout-overswipe" style="left: 0px; transform: translate3d(-169px, 0px, 0px); -webkit-transform: translate3d(-169px, 0px, 0px);">Delete</a></div>
+</li>
+<li class="swipeout">
+<div class="swipeout-content"><a href="#" class="item-link item-content">
+<div class="item-inner">
+<div class="item-title-row">
+<div class="item-title">John Doe (via Twitter)</div>
+<div class="item-after">17:11</div>
+</div>
+<div class="item-subtitle">John Doe (@_johndoe) mentioned you on Twitter!</div>
+<div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
+</div></a></div>
+<div class="swipeout-actions-left"><a href="#" class="bg-green swipeout-overswipe demo-reply">Reply</a><a href="#" class="demo-forward bg-blue">Forward</a></div>
+<div class="swipeout-actions-right"><a href="#" class="demo-actions">More</a><a href="#" class="demo-mark bg-orange">Mark</a><a href="#" data-confirm="Are you sure you want to delete this item?" class="swipeout-delete swipeout-overswipe">Delete</a></div>
+</li>
+<li class="swipeout">
+<div class="swipeout-content"><a href="#" class="item-link item-content">
+<div class="item-inner">
+<div class="item-title-row">
+<div class="item-title">Facebook</div>
+<div class="item-after">16:48</div>
+</div>
+<div class="item-subtitle">New messages from John Doe</div>
+<div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
+</div></a></div>
+<div class="swipeout-actions-left"><a href="#" class="bg-green swipeout-overswipe demo-reply">Reply</a><a href="#" class="demo-forward bg-blue">Forward</a></div>
+<div class="swipeout-actions-right"><a href="#" class="demo-actions">More</a><a href="#" class="demo-mark bg-orange">Mark</a><a href="#" data-confirm="Are you sure you want to delete this item?" class="swipeout-delete swipeout-overswipe">Delete</a></div>
+</li>
+<li class="swipeout">
+<div class="swipeout-content"><a href="#" class="item-link item-content">
+<div class="item-inner">
+<div class="item-title-row">
+<div class="item-title">John Doe (via Twitter)</div>
+<div class="item-after">15:32</div>
+</div>
+<div class="item-subtitle">John Doe (@_johndoe) mentioned you on Twitter!</div>
+<div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
+</div></a></div>
+<div class="swipeout-actions-left"><a href="#" class="bg-green swipeout-overswipe demo-reply">Reply</a><a href="#" class="demo-forward bg-blue">Forward</a></div>
+<div class="swipeout-actions-right"><a href="#" class="demo-actions">More</a><a href="#" class="demo-mark bg-orange">Mark</a><a href="#" data-confirm="Are you sure you want to delete this item?" class="swipeout-delete swipeout-overswipe">Delete</a></div>
+</li>
+</ul>
+</div>
                     </div>
                 </div>
             </div>
